--- a/src/styles/sass/_global.sass
+++ b/src/styles/sass/_global.sass
@@ -3,6 +3,9 @@
   font-family: 'Acherus Grotesque'
   font-size: 1rem
 
+body
+  overflow-x: hidden
+
 a
   color: $dark-color
   text-decoration: none
